src/objects/Contact/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <displayFormat>AccNo-{00000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>