src/objects/Contact/fields/Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>Available_Balance__c</fullName>
    <label>Available Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>