src/objects/Contact/fields/Daily_Debit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Debit_Limit__c</fullName>
    <label>Daily Debit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>