src/objects/Contact/fields/Daily_Transaction_Limit_Count__c.field-meta.xml
<CustomField>
    <fullName>Daily_Transaction_Limit_Count__c</fullName>
    <label>Daily Transaction Limit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>