src/objects/Contact/fields/Monthly_Debit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Debit_Limit__c</fullName>
    <label>Monthly Debit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>