src/objects/Contact/fields/Monthly_Transaction_Limit_Count__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Transaction_Limit_Count__c</fullName>
    <label>Monthly Transaction Limit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>