src/objects/Contact/fields/Transaction_Limit__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Limit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Limit</label>
    <referenceTo>Transaction_Limit__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>